# cie-middleware

./: .gitattributes  .gitignore  LICENSE  License.txt  Middleware CIE.sdf  Middleware CIE.sln  README.md  appveyor.yml  test-private-files.bat
CIEID/: AesCBCcs.cs  App.config  CIEID.csproj  CieCollection.cs  CieModel.cs  Form1.Designer.cs  Form1.cs  Form1.resx  Intro.Designer.cs  Intro.cs  Intro.resx  Logger.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  MoveablePictureBox.cs  PINNotice.Designer.cs  PINNotice.cs  PINNotice.resx  PdfPreview.cs  Program.cs  ProxyInfoManager.cs  SignerInfo.cs
CSP/: AES.cpp  AES.h  APDU.cpp  ASNParser.cpp  ASNParser.h  Allocator.h  Array.h  Base64.cpp  Base64.h  Bitmap.cpp  Bitmap.h  CBase64.cpp  CBase64.h  CIEPKI.APS  CIEPKI.rc  CIEScaduta.cpp  CSP.cpp  CSP.vcxproj  CSP.vcxproj.filters  CardLocker.cpp  CardLocker.h  CardMod.h  DES3.cpp  DES3.h  ExtAuthKey.cpp  IAS.cpp  IAS.h  IniSettings.cpp  MAC.cpp  MAC.h  Message.cpp  Message.h  ModuleInfo.cpp  NotImpl.cpp  PCSC.cpp  PCSC.h  PIN.cpp  PIN.h  PINManager.h  RSA.cpp  (+40 more)
CacheLib/: CacheLib.cpp  CacheLib.h  CacheLib.vcxproj  CacheLib.vcxproj.filters  ReadMe.txt  stdafx.cpp  stdafx.h
cie_sign_sdk/: CMakeLists.txt  README.md  build.bat  clean.bat
cie_sign_sdk/Dependencies/bzip/: bz2.lib
cie_sign_sdk/Dependencies/freetype/: freetype.lib
cie_sign_sdk/Dependencies/freetype/include/freetype2/freetype/config/: ftoption.h
cie_sign_sdk/Dependencies/libcurl/: dump3.txt  libcurl.lib
cie_sign_sdk/Dependencies/libiconv/: charset.lib  iconv.lib
cie_sign_sdk/Dependencies/libiconv/include/: libcharset.h
cie_sign_sdk/Dependencies/libpng/: libpng16.lib
cie_sign_sdk/Dependencies/libxml2/include/libxml2/libxml/: xmlversion.h
cie_sign_sdk/Dependencies/openssl/: libssl.lib
cie_sign_sdk/Dependencies/podofo/include/podofo/: podofo_config.h
cie_sign_sdk/Dependencies/podofo/include/podofo/base/: PdfCompilerCompat.h  PdfDefines.h  PdfLocale.h  PdfMemoryManagement.h  PdfParser.h  PdfVariant.h  PdfWriter.h  podofo_config.h
cie_sign_sdk/Dependencies/podofo/include/podofo/doc/: PdfAcroForm.h  PdfElement.h  PdfMemDocument.h  PdfSignOutputDevice.h  PdfSignatureField.h  PdfSignatureFieldEx.h
cie_sign_sdk/Dependencies/podofo/include_new/podofo/: PdfCompilerCompatPrivate.h  PdfFontCache.h  PdfMemDocument.h  PdfPainter.h
cie_sign_sdk/Dependencies/podofo/include_new/podofo/base/: PdfDictionary.h
cie_sign_sdk/Dependencies/podofo/include_new/podofo/doc/: PdfElement.h  PdfPage.h
cie_sign_sdk/Dependencies/podofo/podofo_bit/include_new/podofo/: PdfPagesTree.h
cie_sign_sdk/Dependencies/podofo/podofo_bit/include_new/podofo/base/: PdfCompilerCompat.h  PdfFiltersPrivate.h  PdfVecObjects.h
cie_sign_sdk/Dependencies/podofo/podofo_bit/include_new/podofo/doc/: PdfDestination.h
cie_sign_sdk/Dependencies/zlib/: zlib.lib
cie_sign_sdk/include/: Base64.h  BaseSigner.h  BigInteger.h  BigIntegerAlgorithms.h  BigIntegerLibrary.h  BigIntegerUtils.h  BigUnsigned.h  BigUnsignedInABase.h  CIEEngineHelper.h  CIESigner.h  CardMod.h  CertStore.h  CounterSignatureGenerator.h  LdapCrl.h  M7MParser.h  PdfSignatureGenerator.h  PdfVerifier.h  SignatureGenerator.h  SignedDataGeneratorEx.h  SignedDocument.h  SignerInfoGenerator.h  TSAClient.h  UUCHashtable.h  UUCLogger.h  UUCProperties.h  UUCStringTable.h  UUCTextFileReader.h  UUCTextFileWriter.h  XAdESGenerator.h  XAdESVerifier.h  definitions.h  disigonsdk.h  pkcs11.h  pkcs11t.h  stdafx.h
cie_sign_sdk/src/: Base64.cpp  BigInteger.cpp  BigIntegerAlgorithms.cpp  BigIntegerUtils.cpp  BigUnsigned.cpp  BigUnsignedInABase.cpp  CIEEngine.c  CIEEngineHelper.c  CIESigner.cpp  CertStore.cpp  CounterSignatureGenerator.cpp  LdapCrl.cpp  M7MParser.cpp  PdfSignatureGenerator.cpp  PdfVerifier.cpp  SignatureGenerator.cpp  SignedDataGeneratorEx.cpp  SignedDocument.cpp  SignerInfoGenerator.cpp  TSAClient.cpp  Token.cpp  UUCLogger.cpp  UUCProperties.cpp  UUCStringTable.cpp  UUCTextFileReader.cpp  UUCTextFileWriter.cpp  XAdESGenerator.cpp  XAdESVerifier.cpp  definitions.cpp  disigonsdk.cpp
cie_sign_sdk/src/ASN1/: ASN1BitString.cpp  ASN1BitString.h  ASN1Boolean.cpp  ASN1Boolean.h  ASN1Exception.h  ASN1GenericSequence.cpp  ASN1GenericSequence.h  ASN1Integer.cpp  ASN1Integer.h  ASN1Null.cpp  ASN1Null.h  ASN1Object.cpp  ASN1Object.h  ASN1ObjectIdentifier.cpp  ASN1ObjectIdentifier.h  ASN1Octetstring.cpp  ASN1Octetstring.h  ASN1OptionalField.cpp  ASN1OptionalField.h  ASN1Sequence.cpp  ASN1Sequence.h  ASN1Setof.cpp  ASN1Setof.h  ASN1UTCTime.cpp  ASN1UTCTime.h  AlgorithmIdentifier.cpp  AlgorithmIdentifier.h  Certificate.cpp  Certificate.h  CertificateInfo.cpp  CertificateInfo.h  ContentInfo.cpp  ContentInfo.h  ContentType.cpp  ContentType.h  Crl.cpp  Crl.h  DigestInfo.cpp  DigestInfo.h  IssuerAndSerialNumber.cpp  (+33 more)
cie_sign_sdk/src/CSP/: ATR.cpp  ATR.h  ExtAuthKey.cpp  IAS.cpp  IAS.h
cie_sign_sdk/src/CacheLib/: CacheLib.cpp  CacheLib.h
cie_sign_sdk/src/Crypto/: AES.cpp  AES.h  ASNParser.cpp  ASNParser.h  Base64.cpp  Base64.h  DES3.cpp  DES3.h  MAC.cpp  MAC.h  MD5.cpp  MD5.h  RSA.cpp  RSA.h  SHA1.cpp  SHA1.h  SHA256.cpp  SHA512.cpp  sha256.h  sha512.h
cie_sign_sdk/src/PCSC/: APDU.cpp  APDU.h  CardLocker.cpp  CardLocker.h  PCSC.cpp  PCSC.h  Token.h
cie_sign_sdk/src/RSA/: des.h  desc.c  global.h  nn.c  nn.h  r_encode.c  r_stdlib.c  rsa.c  rsa.h  rsaeuro.h  sha1.h  sha2.c
cie_sign_sdk/src/Util/: Array.cpp  Array.h  ByteArray.cpp  IniSettings.cpp  IniSettings.h  ModuleInfo.cpp  ModuleInfo.h  SyncroEvent.cpp  SyncroEvent.h  TLV.cpp  TLV.h  UtilException.cpp  UtilException.h  defines.h  funccallinfo.cpp  funccallinfo.h  log.cpp  log.h  util.cpp  util.h
(+177 files in other folders)
